After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 772700 - The preferences options appear in the wrong side in RTL
The preferences options appear in the wrong side in RTL
Status: RESOLVED FIXED
Product: gnome-builder
Classification: Other
Component: general
unspecified
Other Linux
: Normal normal
: ---
Assigned To: GNOME Builder Maintainers
GNOME Builder Maintainers
Depends on:
Blocks:
 
 
Reported: 2016-10-10 14:31 UTC by Yosef Or Boczko
Modified: 2016-10-11 23:00 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Screenshot (62.11 KB, image/png)
2016-10-10 14:31 UTC, Yosef Or Boczko
  Details
Programming Languages - no specific lanuage has been seleceted (54.86 KB, image/png)
2016-10-10 14:32 UTC, Yosef Or Boczko
  Details
Screenshot – Programming Languages – C (81.39 KB, image/png)
2016-10-10 14:32 UTC, Yosef Or Boczko
  Details
column-layout: reverse layout for RTL languages (1.58 KB, patch)
2016-10-10 22:37 UTC, Christian Hergert
committed Details | Review
preferences: save an extra 24px in width (2.57 KB, patch)
2016-10-11 22:45 UTC, Christian Hergert
committed Details | Review
preferences: add fallback for small screen sizes (4.18 KB, patch)
2016-10-11 22:59 UTC, Christian Hergert
committed Details | Review

Description Yosef Or Boczko 2016-10-10 14:31:28 UTC
Created attachment 337321 [details]
Screenshot

The preferences options apear in the left side instead of the right side.

In the Programming Languages scetion the whole options aprear on the center
of the screen.
When you choose some language, it move to the right side (its ok) and in the
left side you see the specifi-language options, but part of the window has cut off.
Comment 1 Yosef Or Boczko 2016-10-10 14:32:05 UTC
Created attachment 337322 [details]
Programming Languages - no specific lanuage has been seleceted
Comment 2 Yosef Or Boczko 2016-10-10 14:32:51 UTC
Created attachment 337323 [details]
Screenshot – Programming Languages – C
Comment 3 Yosef Or Boczko 2016-10-10 14:38:43 UTC
This bug right to the Build Preferences too.
Comment 4 Christian Hergert 2016-10-10 22:37:42 UTC
Created attachment 337379 [details] [review]
column-layout: reverse layout for RTL languages

Rather than make the layout more complex when under an RTL
language, we can just flip things around right before we
size allocate our children.

This seems to be the minimal number of strokes to support
RTL for this widget.
Comment 5 Christian Hergert 2016-10-10 22:38:39 UTC
Thanks!

I feel like I'm cheating with the bug fix on this one, but it seems to work!

Attachment 337379 [details] pushed as 690f9f0 - column-layout: reverse layout for RTL languages
Comment 6 Yosef Or Boczko 2016-10-11 08:46:29 UTC
It still cut off like in the seconf screenshot (when you choose a language
in the Programing Languages).
Comment 7 Christian Hergert 2016-10-11 22:33:13 UTC
Hrmm, I don't think the problem here is due to RTL but instead due to not having enough screen space for the widgets. The display width is too small to fit the widget and so it is getting dropped.

To confirm this, can you unmaximize the window (it will probably become wider than your display) and see if the widgets appear?
Comment 8 Christian Hergert 2016-10-11 22:35:23 UTC
Aha, it looks like our min width is about 1348px now, which would certainly present an issue on 1280x* screens.
Comment 9 Christian Hergert 2016-10-11 22:45:30 UTC
Created attachment 337481 [details] [review]
preferences: save an extra 24px in width

Currently we can't use the programming languages side-by-side
layout on screens with 1280 width. While that is less than
ideal, it could be common today with 2x rendering by the
compositor/gtk. So we need to support it to some degree.

This gets us down to 1324, so we still need to shave off another
44 pixels from the min-width.
Comment 10 Christian Hergert 2016-10-11 22:46:36 UTC
Comment on attachment 337481 [details] [review]
preferences: save an extra 24px in width

Attachment 337481 [details] pushed as f6c528c - preferences: save an extra 24px in width
Comment 11 Christian Hergert 2016-10-11 22:59:23 UTC
Created attachment 337483 [details] [review]
preferences: add fallback for small screen sizes

If we have a small display (such as 1280xH) then we had the
chance we would clip off widgets that should be displayed.

Instead, we can simply enable the horizontal scrolling so that
the widget can be displayed, albeit with some scrolling.
Comment 12 Christian Hergert 2016-10-11 23:00:13 UTC
Comment on attachment 337483 [details] [review]
preferences: add fallback for small screen sizes

Should at least be able to view the widgets now, even if with a bit of scrolling.

Attachment 337483 [details] pushed as 8cce59d - preferences: add fallback for small screen sizes