column-layout: reverse layout for RTL languages

Rather than make the layout more complex when under an RTL
language, we can just flip things around right before we
size allocate our children.

This seems to be the minimal number of strokes to support
RTL for this widget.

https://bugzilla.gnome.org/show_bug.cgi?id=772700